# score3

./: .project-settings.yml  Fm.dyn_hi  Fm.dyn_o  Fm.hi  IMPOSSIBLES.md  Main.dyn_hi  Main.dyn_o  Main.hi  Main.hs  allCombinations.hs  analysis_A.hs  analysis_B.hs  impossibles  impossibles.hs  impossibles2.hs  index.html  machinegun.conf  package.json  score2.cabal  score3.cabal  stack.yaml  webpack.config.js
.git_xxx/: COMMIT_EDITMSG  config  index  packed-refs
.git_xxx/logs/: HEAD
.git_xxx/logs/refs/remotes/origin/: HEAD  master
.git_xxx/objects/pack/: pack-89c49de7452ba98c1dce0f3207e59bee76de227f.idx
.git_xxx/refs/heads/: master
.git_xxx/refs/remotes/origin/: master
.stack-work/: stack.sqlite3
app/: bundle.js  index.html  init.js  main.js
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
static/: IMPOSSIBLES.html  README.html  bundle.js  client.5.js  client.js  client1.js  client4.js  index.html  main.js  screen.css  webpack.config.js
