name:                score2
version:             0.2.0.0
synopsis:            An open source real time, multiplayer game intended to be educational for elementary school students and fun for all.
-- description:
homepage:            https://github.com/dschalk/score2
license:             MIT
license-file:        LICENSE
author:              dschalk
maintainer:          schalkbox@gmail.com
-- copyright:
category:            Concurrency
build-type:          Simple

cabal-version:       >=1.10

executable server
  main-is:             Main.hs
  Other-Modules:       Fm
  build-depends:       base >=4.7 && <4.8
                       , random >=1.0
                       , text >=1.1
                       , websockets >=0.9.2
                       , transformers >=0.3
                       , wai >=3.0
                       , warp >=3.0
                       , file-embed
                       , wai-websockets >=3.0
                       , wai-app-static >=3.0
                       , split
  -- hs-source-dirs:      
  default-language:    Haskell2010
  ghc-options: -with-rtsopts
